--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,9 @@
 @import 'tailwindcss';
 
 @theme {
+  --color-primary-default: #ff343a;
+  --color-primary-hover: #e62f34;
+  --color-primary-active: #cc2a2e;
+  --color-primary-disabled: #f5b5b7;
   --font-sans: 'Manrope', sans-serif;
 }
