chore(ds): add `Button` component (#37)
Co-authored-by: Dhemy <imdhemy@gmail.com>

--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,9 @@
 
 @theme {
   --font-sans: 'Manrope', sans-serif;
+
+  --color-brand: #ff343a;
+  --color-brand-dark: #e62f34;
+  --color-brand-darker: #cc2a2e;
+  --color-brand-muted: #f5b5b7;
 }
