chore(ds): adjust brand colors in login page (#53)

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 
   --color-brand: #ff343a;
   --color-brand-dark: #e62f34;
-  --color-brand-darker: #cc2a2e;
+  --color-brand-darker: #8f1f27;
   --color-brand-muted: #f5b5b7;
 
   --color-secondary: var(--color-gray-800);
